<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_featherfinder">Welcome to FeatherFinder</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter password</string>
    <string name="don_t_have_an_account">Not registered?</string>
    <string name="register">Register</string>
    <string name="confirm_your_password">Confirm password</string>
    <string name="already_have_an_account">Have an account?</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="unit_preference">Unit preference</string>
    <string name="settings">Settings</string>
    <string name="select_range">Select range:</string>
    <string name="feather_finder_logo">Feather Finder Logo</string>
    <string name="add_observation">Add Observation</string>
    <string name="range_hint">20</string>
    <string name="save_settings">SAVE SETTINGS</string>

</resources>