<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsHeading"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:contentDescription="@string/feather_finder_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/ff_logo"
            app:layout_collapseMode="parallax" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Heading -->

    <TextView
        android:id="@+id/settingsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/unitPreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_preference"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeading"
        app:layout_constraintVertical_bias="0.093" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/unitPreference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <RadioButton
            android:id="@+id/radioMetric"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/metric" />

        <RadioButton
            android:id="@+id/radioImperial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial" />
    </RadioGroup>



    <TextView
        android:id="@+id/textViewRangeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_range"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/rangeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/range_hint"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/textViewRangeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeInput" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
